# polar-jupyter

./: README.md  justfile  polars-local.ipynb  polars-local.ju.ipynb  polars-local.ju.py  pyproject.toml  test.ju.py
notebooks/: polars-local.ipynb  polars-local.ju.py
