[tool.poetry]
name = "polar-jupyter"
version = "0.1.0"
description = ""
authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.5"
jupyterlab = "^4.0.6"
jupytext = "^1.15.2"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.9.1"
isort = "^5.12.0"
pdoc = "^14.1.0"
pylint = "^2.17.6"
pyright = "^1.1.329"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.0.291"
ruff-lsp = "^0.0.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
